Agregando funcionalidad getAverageFixedCost
